--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "duckr",
+  "name": "tweedux",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Nahum Smith",
   "license": "ISC",
   "dependencies": {
     "react": "^16.0.0",
