--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
   },
   parserOptions: {
     ecmaversion: 6,
-    sourceType: "modules",
+    sourceType: "module",
     ecmaFeatures: {
       jsx: true,
       experimentalObjectRestSpread: true,
@@ -14,7 +14,7 @@
   },
   extends: ["eslint:recommended", "plugin:react/recommended",'standard'],
   plugins: ["react"],
-  "rules": {
+  rules: {
     "no-console": [2, {allow: ["warn", "error"]}],
     "comma-dangle" : [2, "always-multiline"],
     "semi": [2, "never"],
@@ -22,7 +22,7 @@
     "jsx-quotes": [2, "prefer-single"],
     "react/jsx-boolean-value": [2, "always"],
     "react/jsx-closing-bracket-location": [2, {selfClosing: "after-props", nonEmpty: "after-props"}],
-    "react/jsx-curly-spacing": [2, "never", {"allowMultiline": false}],
+    "react/jsx-curly-spacing": [2, "always", {"allowMultiline": false}],
     "react/jsx-max-props-per-line": [2, {maximum: 3}],
     "react/jsx-no-literals": 2,
     "react/self-closing-comp": 2,
