--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Nahum Smith",
   "license": "ISC",
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
